--- a/style.css
+++ b/style.css
@@ -1,27 +1,35 @@
-body
-    
+body{
+    background-image: url(./);
+}
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    border-color: rgb(255, 255, 255);
+}
 
 
 .title{
     font-weight: bold;
-    color: rgb(66,69,73);
+    color: rgb(0, 0, 0);
     text-align: center;
     font-size: 3rem;
-    border-style: groove solid;
-    border-color: rgb(66,69,73);
+    border-style: outset;
+    border-color: rgb(187, 255, 0);
+    border-radius: 10px;
     margin: 30px;
+    background-color: rgb(200, 255, 0);
 }
 
 .key{
     display: flex;
     width: 100px;
-    height: 100px;
+    height: 50px;
     align-items: center;
     justify-content: center;
-    background-color: rgb(48, 93, 255);
-    color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 2rem;
-    border: 3px solid rgb(0, 0, 0);
+    border: 3px solid rgb(217, 255, 0);
     cursor: pointer;
     border-radius: 100px;
     margin: 10px;
@@ -29,8 +37,8 @@ body
 }
 
 .key:hover{
-    background-color: rgb(54,57,62);
-    border: 3px solid rgb(54,57,62);
+    background-color: rgb(255, 230, 0);
+    border: 3px solid rgb(0, 0, 0);
 }
 
 main{
